<resources>
    <string name="app_name">Clientes</string>
    <string name="title_activity_form">Cadastro</string>

    <!--Activity Lista Pessoas-->
    <string name="lista_pessoas_lista_vazia">Lista vazia</string>
    <string name="lista_pessoas_action_settings">Ação ainda não disponível</string>
    <string name="lista_pessoas_action_delete">Apagar</string>
    <string name="lista_pessoas_saved">Salvo</string>
    <string name="lista_pessoas_deleted">Apagado</string>
    <string name="lista_pessoas_updated">Atualizado</string>
    <string name="lista_pessoas_delete_err">Erro ao apagar</string>
    <string name="lista_pessoas_update_err">Erro ao atualizar</string>

    <!--Popups de confirmação - Lista Pessoas-->
    <string name="lista_pessoas_popup_yes">Sim</string>
    <string name="lista_pessoas_popup_no">Não</string>
    <string name="lista_pessoas_popup_canceled">Cancelado</string>
    <string name="lista_pessoas_popup_update">Atualizar?</string>
    <string name="lista_pessoas_popup_update_desc">Confirma atualização do registro?</string>
    <string name="lista_pessoas_popup_delete">Apagar?</string>
    <string name="lista_pessoas_popup_delete_desc">Ação excluirá o registro permanentemente. Confirma?</string>
    <string name="lista_pessoas_popup_insert">Dados inconsistentes</string>
    <string name="lista_pessoas_popup_insert_desc">Voltar e corrigir dados? (Verifique ID)</string>

    <!--Menu - Lista Pessoas-->
    <string name="action_search">Buscar</string>

    <!--Activity Formulário-->
    <string name="formulario_endereco_encontrado">Endereço encontrado</string>
    <string name="formulario_action_valida_cep">Validar CEP</string>
    <string name="formulario_numero">Codigo</string>
    <string name="formulario_nome">Nome</string>
    <string name="formulario_cpf">CPF</string>
    <string name="formulario_email">Email</string>
    <string name="formulario_telefone">Telefone com DDD</string>
    <string name="formulario_cep">CEP</string>
    <string name="formulario_end_rua">Rua</string>
    <string name="formulario_end_numero">Numero</string>
    <string name="formulario_end_complem">Complemento</string>
    <string name="formulario_end_bairro">Bairro</string>
    <string name="formulario_end_cidade">Cidade</string>
    <string name="formulario_end_estado">UF</string>
    <string name="formulario_endereco_nao_encontrado">Endereço não encontrado</string>

    <!--Menu - Formulário-->
    <string name="action_save">Salvar</string>
    <string name="action_delete">Apagar</string>

    <!--Validações - Formulário-->
    <string name="validate_campo_vazio">Campo obrigatório</string>
    <string name="validate_campo_tamanho">Valor inválido</string>

    <!--ProgressBar-->
    <string name="progressbar_aguarde">Aguarde...</string>

</resources>
