<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/formulario_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/formulario_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/formulario_numero"/>

        <EditText
            android:id="@+id/formulario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/formulario_nome"/>

        <EditText
            android:id="@+id/formulario_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/formulario_cpf"/>

        <EditText
            android:id="@+id/formulario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/formulario_email"/>

        <EditText
            android:id="@+id/formulario_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/formulario_telefone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/formulario_end_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/formulario_cep"
                tools:ignore="NestedWeights" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/formulario_action_valida_cep"
                android:text="@string/formulario_action_valida_cep"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <EditText
            android:id="@+id/formulario_end_rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/formulario_end_rua"/>

        <EditText
            android:id="@+id/formulario_end_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/formulario_end_numero"/>

        <EditText
            android:id="@+id/formulario_end_compl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/formulario_end_complem"/>

        <EditText
            android:id="@+id/formulario_end_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/formulario_end_bairro"/>

        <EditText
            android:id="@+id/formulario_end_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/formulario_end_cidade"/>

        <EditText
            android:id="@+id/formulario_end_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="2"
            android:hint="@string/formulario_end_estado"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>